objects/kugo2p__ShipmentLine__c.object
<CustomObject>
    <description>Kugamon - Related object to Shipments for Shipment Lines. Shipment Lines are auto created when an Order is Released.</description>
    <fields>
        <fullName>kugo2p__DateAvailabletoPromise__c</fullName>
        <formula>kugo2p__SalesOrderProductLine__r.kugo2p__DateAvailableToPromise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Available to Promise</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateRequired__c</fullName>
        <formula>kugo2p__SalesOrderProductLine__r.kugo2p__DateRequired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__EarlyNumberofDays_del__c</fullName>
        <formula>kugo2p__ShipmentDate__c -  kugo2p__DateAvailabletoPromise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Number of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceScheduledQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Scheduled Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceUnscheduledQuantity__c</fullName>
        <formula>kugo2p__Quantity__c -  kugo2p__InvoiceScheduledQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Unscheduled Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoicedQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoiced Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Packages__c</fullName>
        <label>Packages</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductLineQuantity__c</fullName>
        <formula>kugo2p__SalesOrderProductLine__r.kugo2p__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductName__c</fullName>
        <description>Product Name used in the Order Product Line.</description>
        <formula>IF(
  ISBLANK(kugo2p__SalesOrderProductLine__r.kugo2p__ProductName__c),
  kugo2p__Product__r.kugo2p__ReferenceProduct__r.Name,
  kugo2p__SalesOrderProductLine__r.kugo2p__ProductName__c
)</formula>
        <inlineHelpText>Product Name used in the Order Product Line</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityInvoicedToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Invoiced to Date</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product Line</label>
        <referenceTo>kugo2p__SalesOrderProductLine__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipmentDate__c</fullName>
        <formula>kugo2p__Shipment__r.kugo2p__ShipmentDate__c</formula>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipment__c</fullName>
        <label>Shipment Number</label>
        <referenceTo>kugo2p__Shipment__c</referenceTo>
        <relationshipLabel>Shipment Lines</relationshipLabel>
        <relationshipName>Shipment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>kugo2p__RecordStatus__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Shipment Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Shipment Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__Quantity_Must_be_Greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__Quantity__c = 0</errorConditionFormula>
        <errorDisplayField>kugo2p__Quantity__c</errorDisplayField>
        <errorMessage>Shipped Quantity must be greater than 0. If you&apos;re updating the line to avoid shipping this product, delete the Shipment Line.</errorMessage>
    </validationRules>
</CustomObject>